--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <main>
         <section class="container">
             <div class="banner">
-                <div class="the">
+                <div class="banner-content">
                     <h1>The Greatest show on the earth</h1>
-                    <p>Contrary to popular belief, Lorem Ipsum is not simply 
-                        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <p>A world cup is a global sporting competition in which the participant entities – usually international teams or individuals representing their countries – compete for the title of world champion.</p>
                     <button class="button-1">Watch Live <i class="fa-solid fa-chevron-right"></i></button>
                 </div>
                 <div class="image-banner">
@@ -43,7 +42,7 @@
 
                 <div class="right-part">
 
-                    <div class="player">
+                    <div class="player-blog">
                         <div class="player-img">
                             <img src="Blog Image.png" alt="">
                         </div>
@@ -61,7 +60,7 @@
                         </div>
                     </div>
 
-                    <div class="player">
+                    <div class="player-blog">
                         <div class="player-img">
                             <img src="Blog Image.png" alt="">
                         </div>
@@ -79,7 +78,7 @@
                         </div>
                     </div>
 
-                    <div class="player">
+                    <div class="player-blog">
                         <div class="player-img">
                             <img src="Blog Image.png" alt="">
                         </div>
@@ -97,7 +96,7 @@
                         </div>
                     </div>
 
-                    <div class="player">
+                    <div class="player-blog">
                         <div class="player-img">
                             <img src="Blog Image.png" alt="">
                         </div>
@@ -117,7 +116,7 @@
                         </div>
                     </div>
 
-                    <div class="player">
+                    <div class="player-blog">
                         <div class="player-img">
                             <img src="Blog Image.png" alt="">
                         </div>
@@ -135,7 +134,7 @@
                         </div>
                     </div>
 
-                    <div class="player">
+                    <div class="player-blog">
                         <div class="player-img">
                             <img src="Blog Image.png" alt="">
                         </div>
@@ -153,7 +152,7 @@
                         </div>
                     </div>
 
-                    <div class="player">
+                    <div class="player-blog">
                         <div class="player-img">
                             <img src="Blog Image.png" alt="">
                         </div>
@@ -171,7 +170,7 @@
                         </div>
                     </div>
 
-                    <div class="player">
+                    <div class="player-blog">
                         <div class="player-img">
                             <img src="Blog Image.png" alt="">
                         </div>
@@ -189,7 +188,7 @@
                         </div>
                     </div>
 
-                    <div class="player">
+                    <div class="player-blog">
                         <div class="player-img">
                             <img src="Blog Image.png" alt="">
                         </div>
