--- a/match.html
+++ b/match.html
@@ -21,10 +21,9 @@
     <main>
         <section class="container">
             <div class="banner">
-                <div class="the">
+                <div class="banner-content">
                     <h1>The Greatest show on the earth</h1>
-                    <p>Contrary to popular belief, Lorem Ipsum is not simply 
-                        random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <p>A world cup is a global sporting competition in which the participant entities – usually international teams or individuals representing their countries – compete for the title of world champion.</p>
                     <button class="button-1">Watch Live <i class="fa-solid fa-chevron-right"></i></button>
                 </div>
                 <div class="image-banner">
@@ -45,8 +44,8 @@
 
                     <div class="player">
                         <div class="player-img">
-                            <img src="Flag.png" alt=""> <span>Vs</span>
-                            <img src="germany Flag.png" alt="">
+                            <img class="gap" src="Flag.png" alt=""> <span>Vs</span>
+                            <img  src="germany Flag.png" alt="">
                         </div>
                         <div class="content">
                             <h2>Germany VS France </h2>
@@ -103,19 +102,6 @@
                             <p>April 01, 2023, 1.00 AM</p>
                         </div>
                     </div>
-                    <div class="player">
-                        <div class="player-img">
-                            <img src="Flag.png" alt=""> <span>Vs</span>
-                            <img src=" Flag.png" alt="">
-                        </div>
-                        <div class="content">
-                            <h2>Germany VS France </h2>
-                            <p>April 01, 2023, 1.00 AM</p>
-                        </div>
-                    </div>
-
-                    
-
                 </div>
             </div>
         </section>
