--- a/match.html
+++ b/match.html
@@ -85,7 +85,7 @@
                     <div class="player">
                         <div class="player-img">
                             <img src="Flag.png" alt=""> <span>Vs</span>
-                            <img src=" Flag.png" alt="">
+                            <img src="germany Flag.png" alt="">
                         </div>
                         <div class="content">
                             <h2>Germany VS France </h2>
@@ -95,7 +95,7 @@
                     <div class="player">
                         <div class="player-img">
                             <img src="Flag.png" alt=""> <span>Vs</span>
-                            <img src="Flag.png" alt="">
+                            <img src="germany Flag.png" alt="">
                         </div>
                         <div class="content">
                             <h2>Germany VS France </h2>
